fixed sidenav a tags jumping on hover, fixed backdrop from targeting dom element to setting state back to false which corrected the error associated to clicking backdrop to click off sidenav

--- a/epic/FE/src/sass/projects.scss
+++ b/epic/FE/src/sass/projects.scss
@@ -660,7 +660,7 @@
         background-size: cover;
         -o-background-size: cover;
         .overlay {
-            width: 150% !important;
+            width: 130% !important;
             min-height: 800px;
             float: left;
             left: -400px;
@@ -677,7 +677,7 @@
             .projy {
                 // padding-top: 105px;
                 margin: 0px;
-                margin-top: 1%;
+                margin-top: 5%;
                 margin-left: 3%;
                 margin-bottom: 3%;
                 width: 60% !important;
